docs: generate dynamically the API reference index

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "doc:clear": "rm -rf ./_site",
         "doc:build:11ty": "NODE_ENV=production eleventy --config=.eleventy.cjs",
         "doc:start:11ty": "eleventy --serve --config=.eleventy.cjs",
-        "doc:api": "node scripts/generate-api-reference.mjs",
+        "doc:api": "node scripts/docs/generate-api-reference.mjs",
         "ts:reset": "rm -rf ./packages/*/.tsbuildinfo",
         "publish": "npm publish --access public --workspaces",
         "test": "vitest run --config vitest.config.ts",
@@ -67,6 +67,7 @@
         "eslint-plugin-sonarjs": "^0.19.0",
         "gh-pages": "^5.0.0",
         "globby": "^13.1.4",
+        "handlebars": "^4.7.7",
         "jsoneditor": "^9.10.0",
         "lint-staged": "^13.2.2",
         "luxon": "^3.3.0",
