--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
         "build": "npm-run-all ts:reset build:esm build:cjs",
         "build:cjs": "node ./scripts/build-pkgs.mjs",
         "build:esm": "tsc --build packages/*/tsconfig.json",
-        "doc:build": "npm-run-all doc:clear doc:api -p doc:build:11ty",
-        "doc:start": "npm-run-all doc:api -p doc:start:11ty",
+        "doc:build": "npm-run-all doc:clear doc:api doc:build:11ty",
+        "doc:start": "npm-run-all doc:clear doc:api doc:start:11ty",
         "doc:deploy": "gh-pages -d _site -m \"docs: update documentation\"",
         "doc:clear": "rm -rf ./_site",
         "doc:build:11ty": "NODE_ENV=production eleventy --config=.eleventy.cjs",
