chore: enable eslint consistent type imports and exports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -282,6 +282,8 @@
                     }
                 ],
                 "@typescript-eslint/unified-signatures": "error",
+                "@typescript-eslint/consistent-type-exports": "error",
+                "@typescript-eslint/consistent-type-imports": "error",
                 "@typescript-eslint/no-magic-numbers": "off",
                 "@typescript-eslint/no-empty-function": [
                     "error",
