--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "@typescript-eslint/eslint-plugin": "^5.59.9",
         "@typescript-eslint/parser": "^5.59.9",
         "@typescript/lib-dom": "npm:@types/web@^0.0.99",
-        "@vitest/coverage-c8": "^0.32.0",
+        "@vitest/coverage-v8": "^0.32.0",
         "ace-builds": "^1.22.0",
         "autoprefixer": "^10.4.14",
         "c8": "^7.14.0",
