--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
         "url": "https://github.com/jordimarimon/ts-ast-parser/issues"
     },
     "engines": {
-        "node": "^14.20.0 || ^16.0.0 || ^18.0.0",
-        "npm": "^7.0.0 || ^8.0.0 || ^9.0.0"
+        "node": "^16.0.0 || ^18.0.0",
+        "npm": "^8.0.0 || ^9.0.0"
     },
     "scripts": {
         "build": "npm-run-all ts:reset build:esm build:cjs",
