--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ts-ast-parser/core",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "author": "Jordi Marimon Palarea",
     "description": "Reflects a simplified version of the TypeScript AST for generating documentation",
     "homepage": "https://jordimarimon.github.io/ts-ast-parser",
@@ -40,9 +40,10 @@
         "README.md"
     ],
     "engines": {
-        "node": "^14.20.0 || ^16.0.0 || ^18.0.0"
+        "node": "^16.0.0 || ^18.0.0"
     },
     "dependencies": {
+        "chalk": "^5.2.0",
         "comment-parser": "^1.3.1",
         "globby": "^13.1.3",
         "tslib": "^2.5.0"
