--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "marked-smartypants": "^1.0.2",
         "npm-check-updates": "^16.10.12",
         "npm-run-all": "^4.1.5",
+        "package-json-type": "^1.0.3",
         "postcss": "^8.4.24",
         "postcss-import": "^15.1.0",
         "postcss-preset-env": "^8.4.2",
