--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,6 +41,7 @@
         "chalk": "^5.2.0",
         "comment-parser": "^1.3.1",
         "globby": "^13.1.3",
+        "package-json-type": "^1.0.3",
         "tslib": "^2.5.0"
     },
     "peerDependencies": {
