feat: add support for using the library in the browser with the full TS declaration files

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@typescript/lib-dom": "npm:@types/web@^0.0.107",
+        "@typescript/vfs": "^1.4.0",
         "@vitest/coverage-v8": "^0.33.0",
         "ace-builds": "^1.23.4",
         "autoprefixer": "^10.4.14",
@@ -71,6 +72,7 @@
         "jsoneditor": "^9.10.2",
         "lint-staged": "^13.2.3",
         "luxon": "^3.3.0",
+        "lz-string": "^1.5.0",
         "marked": "^5.1.1",
         "marked-smartypants": "^1.0.2",
         "npm-check-updates": "^16.10.15",
