--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,9 +38,11 @@
         "node": "^16.0.0 || ^18.0.0"
     },
     "dependencies": {
+        "@typescript/vfs": "^1.4.0",
         "chalk": "^5.2.0",
         "comment-parser": "^1.3.1",
         "globby": "^13.1.3",
+        "lz-string": "^1.5.0",
         "package-json-type": "^1.0.3",
         "tslib": "^2.5.0"
     },
