--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,6 @@
         "tslib": "^2.6.1"
     },
     "peerDependencies": {
-        "typescript": "^4.0.2 || ^5.0.4"
+        "typescript": "4.6.x || 4.7.x || 4.8.x || 4.9.x || 5.0.x || 5.1.x || 5.2.x"
     }
 }
