--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
         "jsoneditor": "^9.10.2",
         "lint-staged": "^13.2.3",
         "luxon": "^3.4.0",
-        "marked": "^7.0.2",
-        "marked-smartypants": "^1.0.5",
+        "markdown-it": "^13.0.1",
         "npm-check-updates": "^16.10.18",
         "npm-run-all": "^4.1.5",
         "package-json-type": "^1.0.3",
