--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
             "parserOptions": {
                 "ecmaVersion": 2020,
                 "sourceType": "module",
-                "project": "./tsconfig.json"
+                "project": ["./packages/*/tsconfig.json", "./tsconfig.json"]
             },
             "plugins": [
                 "@typescript-eslint",
