chore: add comment package as reference in core

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,5 +13,10 @@
     ],
     "exclude": [
         "**node_modules**"
+    ],
+    "references": [
+        {
+            "path": "../comment"
+        }
     ]
 }
