--- a/packages/comment/package.json
+++ b/packages/comment/package.json
@@ -17,7 +17,7 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/jordimarimon/ts-ast-parser.git",
-        "directory": "packages/jsdoc"
+        "directory": "packages/comment"
     },
     "bugs": {
         "url": "https://github.com/jordimarimon/ts-ast-parser/issues"
