refactor: enable jsdoc eslint plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
                 "plugin:import/typescript",
                 "plugin:@typescript-eslint/strict-type-checked",
                 "plugin:@typescript-eslint/stylistic-type-checked",
+                "plugin:jsdoc/recommended-typescript-error",
                 "plugin:sonarjs/recommended"
             ],
             "rules": {
