--- a/packages/comment/package.json
+++ b/packages/comment/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ts-ast-parser/comment",
-    "version": "0.0.0",
+    "version": "0.1.0",
     "author": "Jordi Marimon Palarea",
     "description": "Parses documentation comments",
     "homepage": "https://jordimarimon.github.io/ts-ast-parser",
@@ -16,7 +16,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/jordimarimon/ts-ast-parser.git",
+        "url": "git+https://github.com/jordimarimon/ts-ast-parser.git",
         "directory": "packages/comment"
     },
     "bugs": {
