--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/jordimarimon/ts-ast-parser.git",
+        "url": "git+https://github.com/jordimarimon/ts-ast-parser.git",
         "directory": "packages/core"
     },
     "bugs": {
@@ -38,7 +38,7 @@
         "node": "^16.0.0 || ^18.0.0 || ^20.0.0"
     },
     "dependencies": {
-        "@ts-ast-parser/comment": "0.0.0",
+        "@ts-ast-parser/comment": "0.1.0",
         "globby": "^13.2.2",
         "package-json-type": "^1.0.3",
         "tslib": "^2.6.1"
