fix(core): reflect import specifiers that are type only
Before only import clauses where checked for type only and
import specifiers were ignored.

Something like `import type { Foo } from './foo.js'` was correctly
reflected as type only, but if instead we had
`import { type Foo } from './foo.js'`, this wasn't reflected as type
only.

Refs #209

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,6 +44,6 @@
         "tslib": "^2.6.1"
     },
     "peerDependencies": {
-        "typescript": "4.6.x || 4.7.x || 4.8.x || 4.9.x || 5.0.x || 5.1.x || 5.2.x || 5.3.x"
+        "typescript": "^4.6.x || 5.0.x || 5.1.x || 5.2.x || 5.3.x"
     }
 }
