--- a/package.json
+++ b/package.json
@@ -46,20 +46,21 @@
     "devDependencies": {
         "@11ty/eleventy": "^2.0.1",
         "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-        "@commitlint/cli": "^18.4.2",
-        "@commitlint/config-conventional": "^18.4.2",
-        "@types/node": "~20.9.2",
-        "@typescript-eslint/eslint-plugin": "^6.11.0",
-        "@typescript-eslint/parser": "^6.11.0",
-        "@typescript/lib-dom": "npm:@types/web@^0.0.119",
+        "@commitlint/cli": "^18.4.3",
+        "@commitlint/config-conventional": "^18.4.3",
+        "@stylistic/eslint-plugin": "^1.4.1",
+        "@types/node": "~20.10.2",
+        "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "@typescript-eslint/parser": "^6.13.1",
+        "@typescript/lib-dom": "npm:@types/web@^0.0.124",
         "@vitest/coverage-v8": "^0.34.6",
-        "ace-builds": "^1.31.2",
+        "ace-builds": "^1.32.0",
         "autoprefixer": "^10.4.16",
         "c8": "^8.0.1",
         "chalk": "^5.3.0",
         "cssnano": "^6.0.1",
-        "esbuild": "^0.19.6",
-        "eslint": "^8.54.0",
+        "esbuild": "^0.19.8",
+        "eslint": "^8.55.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-jsdoc": "^46.9.0",
@@ -74,7 +75,7 @@
         "npm-check-updates": "^16.14.11",
         "npm-run-all": "^4.1.5",
         "package-json-type": "^1.0.3",
-        "postcss": "^8.4.31",
+        "postcss": "^8.4.32",
         "postcss-import": "^15.1.0",
         "postcss-preset-env": "^9.3.0",
         "prismjs": "^1.29.0",
@@ -82,7 +83,7 @@
         "tailwindcss": "^3.3.5",
         "tailwindcss-logical": "^3.0.1",
         "tslib": "^2.6.2",
-        "typescript": "^5.2.2",
+        "typescript": "^5.3.2",
         "vite-tsconfig-paths": "^4.2.1",
         "vitest": "^0.34.6"
     }
