style: disable cognitive complexity ESLint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -277,6 +277,7 @@
                 "import/no-named-as-default-member": "off",
 
                 "sonarjs/no-duplicate-string": "off",
+                "sonarjs/cognitive-complexity": "off",
 
                 "jsdoc/require-jsdoc": "off",
                 "jsdoc/tag-lines": [
