--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -280,6 +280,8 @@
                 "sonarjs/cognitive-complexity": "off",
 
                 "jsdoc/require-jsdoc": "off",
+                "jsdoc/require-param-description": "off",
+                "jsdoc/require-returns": "off",
                 "jsdoc/tag-lines": [
                     "error",
                     "any",
