--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/jordimarimon/ts-ast-parser.git"
+        "url": "git+https://github.com/jordimarimon/ts-ast-parser.git"
     },
     "bugs": {
         "url": "https://github.com/jordimarimon/ts-ast-parser/issues"
@@ -86,5 +86,6 @@
         "typescript": "^5.3.3",
         "vite-tsconfig-paths": "^4.3.1",
         "vitest": "^1.2.1"
-    }
+    },
+    "version": ""
 }
