--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build and Test
 
 on:
     push:
-        branches: ['main']
+        branches: [ 'main' ]
     pull_request:
-        branches: ['main']
+        branches: [ 'main' ]
 
 jobs:
     analyse:
@@ -17,24 +17,29 @@ jobs:
             security-events: write
         strategy:
             matrix:
-                node-version: [20.x]
+                node-version: [ 20.x ]
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v3
+            -   name: Checkout repository
+                uses: actions/checkout@v3
 
-            - name: Setup Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
-              with:
-                  node-version: ${{ matrix.node-version }}
+            -   name: Setup Node.js ${{ matrix.node-version }}
+                uses: actions/setup-node@v3
+                with:
+                    node-version: ${{ matrix.node-version }}
 
-            - name: Install latest NPM
-              run: npm i -g npm@latest
+            -   name: Install latest NPM
+                run: npm i -g npm@latest
 
-            - name: Install dependencies
-              run: npm ci
+            -   name: Install dependencies
+                run: npm ci
 
-            - name: Build
-              run: npm run build
+            -   name: Build
+                run: npm run build
 
-            - name: Run tests
-              run: npm run test
+            -   name: Run tests and collect coverage
+                run: npm run coverage
+
+            -   name: Upload coverage to Codecov
+                uses: codecov/codecov-action@v3
+                with:
+                    files: ./coverage/cobertura-coverage.xml
