chore: remove codecov badge from README.md

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,5 @@ jobs:
             -   name: Build
                 run: npm run build
 
-            -   name: Run tests and collect coverage
-                run: npm run coverage
-
-            -   name: Upload coverage to Codecov
-                uses: codecov/codecov-action@v3
-                with:
-                    files: ./coverage/cobertura-coverage.xml
+            -   name: Run tests
+                run: npm run test
