--- a/packages/comment/package.json
+++ b/packages/comment/package.json
@@ -36,7 +36,7 @@
         "README.md"
     ],
     "engines": {
-        "node": "^18.0.0 || ^20.0.0"
+        "node": "18.x || 20.x || 21.x"
     },
     "dependencies": {
         "tslib": "^2.6.2"
