--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,7 +35,7 @@
         "README.md"
     ],
     "engines": {
-        "node": "^18.0.0 || ^20.0.0"
+        "node": "18.x || 20.x || 21.x"
     },
     "dependencies": {
         "@ts-ast-parser/comment": "0.1.0",
